# TechnionProjects

computerArch/hw2/: cacheSim.cpp
computerArch/hw4/: CMakeLists.txt  core_api.c  main.c  makefile  run_all_tests_facebook.sh
computerArch/hw4/tests/: example4קס.YoursOut  test0.in  test1187.YoursOut  test1340.YoursOut  test2717.YoursOut  test272.YoursOut  test2723.YoursOut  test2726.YoursOut  test2729.YoursOut  test2732.YoursOut  test2734.YoursOut  test274.YoursOut  test2743.YoursOut  test2745.YoursOut  test275.YoursOut  test2750.YoursOut  test2752.YoursOut  test2755.YoursOut  test2757.YoursOut  test2759.YoursOut  test276.YoursOut  test2761.YoursOut  test2762.YoursOut  test2766.YoursOut  test277.YoursOut  test2773.YoursOut  test2775.YoursOut  test2776.YoursOut  test2777.YoursOut  test2779.YoursOut  test2780.YoursOut  test2781.YoursOut  test2785.YoursOut  test2788.YoursOut  test2796.YoursOut  test2798.YoursOut  test280.YoursOut  (+391 more)
lab1a_project/: FinalSubmission_Daniel_On (1).qar
mtm/ex1/part2/: CMakeLists.txt  matamikya.c  matamikya.h  matamikya_order.c  matamikya_order.h  matamikya_product.c  matamikya_product.h  order.c  order.h  product.c  product.h
mtm/ex2/: CMakeLists.txt  Citizen.cpp  Citizen.h  City.cpp  City.h  Employee.cpp  Employee.h  Exceptions.cpp  Exceptions.h  Faculty.h  Manager.cpp  Manager.h  Skill.cpp  Skill.h  WorkPlace.cpp  WorkPlace.h  Workplace.cpp  cityTestsBiadsy.cpp  city_test.cpp  exceptions.cpp  exceptions.h  main.cpp  makefile  my_test.cpp  workplace_print_test.cpp
mtm/ex2/testOutputsBiadsy/expected/: testCitySegel.txt
mtm/ex2/testOutputsBiadsy/printed/: testCity.txt  testCitySegel.txt  testFaculty.txt  testWorkplace.txt  testWorkplaceSegel.txt
mtm/ex3/: hw3_part1.py  hw3_part2--TEST.py  hw3_part2.py  hw3_tests.py  main.py  test_staff.py  test_uri.py
(+6 files in other folders)
